# vestargo

./: Cargo.toml  README.md  sequence.yaml
src/: bit.rs  main.rs  simulator.rs  template.rs
src/template/: crypto_price.rs  happy_text.rs  heart.rs  meteo.rs  rainbow.rs  text.rs
